examples/test/testpolicy12204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12204
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key37: value39
      key43: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value33
          key28: value27
      podSelector:
        matchLabels:
          key40: value38
          key21: value6
